@@ -5,6 +5,9 @@ Broker:
 - Fix possible memory leak when using a topic that has a leading slash. Fixes
   bug #1360985.
 
+Client library:
+- Fix mutex being incorrectly passed by value. Fixes bug #1373785.
+
 1.3.4 - 20140806
 ================
 
